# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  ffnnTool.cpp
data/: table.csv
learning/: simpleNN.cpp
src/: ActivationFunctions.h  BaseLayer.cpp  BaseLayer.h  CMakeLists.txt  ConvLayer.h  FFNN.cpp  FFNN.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  csvFile.cpp  csvFile.h  csvFileParser.h  matd.cpp  matd.h  matrixFile.h  matrixLoader.cpp  matrixLoader.h  matrixSaver.cpp  matrixSaver.h
src/OpenCLHelper/: CLEnvironment.h  CLPlatforms.h  GetClErrorString.h  OpenCLHelper.h
src/Util/: CommonCLSrc.h  CommonHeaders.h  FlipBytes.h  LoadImage.cpp  LoadImage.h  MNISTImageFile.cpp  MNISTImageFile.h  MNISTLabelFile.cpp  MNISTLabelFile.h  SaveImage.cpp  SaveImage.h
src/fileAccess/: csvFileParser.cpp
test/: CLBLASStartupTest.cpp  CMakeLists.txt  FFNNTest.cpp  FullyConnectedLayerTest.cpp  MNISTTest.cpp  OpenclStartupTest.cpp  csvFileTest.cpp  matdTest.cpp  matrixLoaderTest.cpp  matrixSaverTest.cpp  stockDataTest.cpp
